fix: shaky overflow

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ nav .nav-btn{
     justify-content: center;
     align-items: center;
     text-align: center;
-    overflow-x: hidden;}
+    overflow: hidden;}
 .home h1{
     font: bolder 80px 'Nova script';
     color: #E26A2C;
